unpackaged/main/default/objects/sked_Notification_Format__mdt/sked_Notification_Format__mdt.object-meta.xml
<CustomObject>
    <label>Skedulo Notification Format</label>
    <pluralLabel>Skedulo Notification Formats</pluralLabel>
</CustomObject>