unpackaged/main/default/objects/sked_Notification_Format__mdt/fields/sked_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_Time_Field__c</fullName>
    <label>Date Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>