unpackaged/main/default/objects/sked_Notification_Format__mdt/fields/sked_Notification_Setting__c.field-meta.xml
<CustomField>
    <fullName>sked_Notification_Setting__c</fullName>
    <label>Skedulo Notification Setting</label>
    <referenceTo>sked_Notification_Setting__mdt</referenceTo>
    <relationshipLabel>Skedulo Notification Formats</relationshipLabel>
    <relationshipName>sked_Notification_Formats</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>