unpackaged/main/default/objects/sked_Notification_Format__mdt/fields/sked_Timezone_Field__c.field-meta.xml
<CustomField>
    <fullName>sked_Timezone_Field__c</fullName>
    <label>Timezone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>